Fixed bug #35872 (Prevent object store references during RSHUTDOWN)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@231199 c90b9560-bf6c-de11-be94-00142212c4b1